[gd_scene load_steps=4 format=2]

[ext_resource path="res://basic.tscn" type="PackedScene" id=1]
[ext_resource path="res://MissionSelect.tscn" type="PackedScene" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="MissionSelect" parent="." instance=ExtResource( 2 )]

[node name="Basic" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="missionscreen" from="MissionSelect" to="." method="_on_MissionSelect_missionscreen"]
[connection signal="missionselect_screen" from="Basic" to="." method="_on_Basic_missionselect_screen"]
